Fix horizontal overflow in tables

--- a/apps/client/src/app/pages/accounts/accounts-page.scss
+++ b/apps/client/src/app/pages/accounts/accounts-page.scss
@@ -1,6 +1,10 @@
 :host {
   display: block;
 
+  .accounts {
+    overflow-x: auto;
+  }
+
   .fab-container {
     position: fixed;
     right: 2rem;
