--- a/apps/client/src/styles.scss
+++ b/apps/client/src/styles.scss
@@ -164,6 +164,10 @@ ngx-skeleton-loader {
   min-width: unset !important;
 }
 
+.page {
+  padding-bottom: 5rem;
+}
+
 .svgMap-tooltip {
   border-bottom: none;
 
